# tg_bot_guess_number

./: .pre-commit-config.yaml  .pre_commit_config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
tg_bot_guess_number/: available_answers.py  bot_answers.py  config.py  main.py  match_info.py  player.py
