[tool.poetry]
name = "tg-bot-guess-number"
version = "0.1.0"
description = ""
authors = ["sariya <dayzwaitik123@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
pydantic-settings = "^2.2.1"
ruff = "^0.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ['E501', 'E712']
